# AMIPS

./: .gitignore  README.md
Mathematica/: shooting.nb
PDEs/: initial_conditions.py  mips_fx.py  nonlinear_assembly.py  readme.md  run_amips.py
SDEs/: CMakeLists.txt  readme.md
SDEs/src/: binstructure.cpp  integrator.cpp  io.cpp  main.cpp  model.cpp  simulationstate.cpp
SDEs/src/include/AMIPS/: binstructure.hpp  constfuncs.hpp  field.hpp  integrator.hpp  io.hpp  model.hpp  parameters.hpp  simulationstate.hpp  staticasserts.hpp  structures.hpp
SDEs/src/include/utils/: barrier.hpp  parallel.hpp  random.hpp  sortpermutation.hpp  threadpool.hpp  timer.hpp
